--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pares-impares",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,6 @@
   "author": "ht1204",
   "license": "MIT",
   "dependencies": {
-    "ejs": "^3.1.8",
     "express": "^4.18.2"
   }
 }
